// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField Component base should return a TextField object 1`] = `
.c0 {
  font-family: inherit;
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 {
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  padding: 1rem;
}

<TextField
  assistiveText=""
  controlId="exampleFullName"
  controlLabel="Full name"
  validationError=""
>
  <ControlGroupComponent
    assistiveText=""
    controlId="exampleFullName"
    controlLabel="Full name"
    validationError=""
  >
    <ControlGroupBase
      assistiveText=""
      controlId="exampleFullName"
      controlLabel="Full name"
      validationError=""
    >
      <styled.div>
        <div
          className=""
        >
          <ControlLabel
            color="inherit"
            fontFamily="inherit"
            fontWeight="inherit"
            for="exampleFullName"
            kerning="inherit"
            lg={false}
            sm={false}
            textAlign="inherit"
            textDecoration="inherit"
          >
            <styled.label
              for="exampleFullName"
            >
              <label
                className="c0"
              >
                Full name
              </label>
            </styled.label>
          </ControlLabel>
           
          <TextFieldComponentConvertor
            assistiveText=""
            controlId="exampleFullName"
            controlLabel=""
            validationError=""
          >
            <TextFieldComponent
              borderColor="hsl(0, 0%, 25%)"
              borderRadius="4px"
              color="inherit"
              fontFamily="inherit"
              fontWeight="inherit"
              id="exampleFullName"
              kerning="inherit"
              lg={false}
              padding="1rem"
              sm={false}
              textAlign="inherit"
              textDecoration="inherit"
            >
              <styled.input
                id="exampleFullName"
              >
                <input
                  className="c1"
                  id="exampleFullName"
                  type="text"
                />
              </styled.input>
            </TextFieldComponent>
          </TextFieldComponentConvertor>
           
        </div>
      </styled.div>
    </ControlGroupBase>
  </ControlGroupComponent>
</TextField>
`;

exports[`TextField Component base with assistive text should return a TextField object 1`] = `
.c0 {
  font-family: inherit;
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 {
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  padding: 1rem;
}

.c2 {
  font-family: inherit;
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

<TextField
  assistiveText="Please tell me your name"
  controlId="exampleFullName"
  controlLabel="Full name"
  validationError=""
>
  <ControlGroupComponent
    assistiveText="Please tell me your name"
    controlId="exampleFullName"
    controlLabel="Full name"
    validationError=""
  >
    <ControlGroupBase
      assistiveText="Please tell me your name"
      controlId="exampleFullName"
      controlLabel="Full name"
      validationError=""
    >
      <styled.div>
        <div
          className=""
        >
          <ControlLabel
            color="inherit"
            fontFamily="inherit"
            fontWeight="inherit"
            for="exampleFullName"
            kerning="inherit"
            lg={false}
            sm={false}
            textAlign="inherit"
            textDecoration="inherit"
          >
            <styled.label
              for="exampleFullName"
            >
              <label
                className="c0"
              >
                Full name
              </label>
            </styled.label>
          </ControlLabel>
           
          <TextFieldComponentConvertor
            assistiveText=""
            controlId="exampleFullName"
            controlLabel=""
            validationError=""
          >
            <TextFieldComponent
              borderColor="hsl(0, 0%, 25%)"
              borderRadius="4px"
              color="inherit"
              fontFamily="inherit"
              fontWeight="inherit"
              id="exampleFullName"
              kerning="inherit"
              lg={false}
              padding="1rem"
              sm={false}
              textAlign="inherit"
              textDecoration="inherit"
            >
              <styled.input
                id="exampleFullName"
              >
                <input
                  className="c1"
                  id="exampleFullName"
                  type="text"
                />
              </styled.input>
            </TextFieldComponent>
          </TextFieldComponentConvertor>
           
          <AssistiveText
            color="inherit"
            fontFamily="inherit"
            fontWeight="inherit"
            id="exampleFullNameHelp"
            kerning="inherit"
            lg={false}
            sm={false}
            textAlign="inherit"
            textDecoration="inherit"
          >
            <styled.div
              id="exampleFullNameHelp"
            >
              <div
                className="c2"
                id="exampleFullNameHelp"
              >
                Please tell me your name
              </div>
            </styled.div>
          </AssistiveText>
        </div>
      </styled.div>
    </ControlGroupBase>
  </ControlGroupComponent>
</TextField>
`;

exports[`TextField Component base with validation error should return a TextField object 1`] = `
.c0 {
  font-family: inherit;
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.c1 {
  font-family: inherit;
  font-size: inherit;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  border: 1px solid hsl(0,0%,25%);
  border-radius: 4px;
  padding: 1rem;
}

.c2 {
  font-family: inherit;
  font-size: 0.8rem;
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: hsl(4.1,89.6%,58.4%);
  text-align: inherit;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

<TextField
  assistiveText=""
  controlId="exampleFullName"
  controlLabel="Full name"
  validationError="This is a require field."
>
  <ControlGroupComponent
    assistiveText=""
    controlId="exampleFullName"
    controlLabel="Full name"
    validationError="This is a require field."
  >
    <ControlGroupBase
      assistiveText=""
      controlId="exampleFullName"
      controlLabel="Full name"
      validationError="This is a require field."
    >
      <styled.div>
        <div
          className=""
        >
          <ControlLabel
            color="inherit"
            fontFamily="inherit"
            fontWeight="inherit"
            for="exampleFullName"
            kerning="inherit"
            lg={false}
            sm={false}
            textAlign="inherit"
            textDecoration="inherit"
          >
            <styled.label
              for="exampleFullName"
            >
              <label
                className="c0"
              >
                Full name
              </label>
            </styled.label>
          </ControlLabel>
           
          <TextFieldComponentConvertor
            assistiveText=""
            controlId="exampleFullName"
            controlLabel=""
            validationError=""
          >
            <TextFieldComponent
              borderColor="hsl(0, 0%, 25%)"
              borderRadius="4px"
              color="inherit"
              fontFamily="inherit"
              fontWeight="inherit"
              id="exampleFullName"
              kerning="inherit"
              lg={false}
              padding="1rem"
              sm={false}
              textAlign="inherit"
              textDecoration="inherit"
            >
              <styled.input
                id="exampleFullName"
              >
                <input
                  className="c1"
                  id="exampleFullName"
                  type="text"
                />
              </styled.input>
            </TextFieldComponent>
          </TextFieldComponentConvertor>
           
          <AssistiveText
            color="brandDanger"
            fontFamily="inherit"
            fontWeight="inherit"
            id="exampleFullNameError"
            kerning="inherit"
            lg={false}
            sm={false}
            textAlign="inherit"
            textDecoration="inherit"
          >
            <styled.div
              id="exampleFullNameError"
            >
              <div
                className="c2"
                id="exampleFullNameError"
              >
                This is a require field.
              </div>
            </styled.div>
          </AssistiveText>
        </div>
      </styled.div>
    </ControlGroupBase>
  </ControlGroupComponent>
</TextField>
`;
